2025-06-16  Saruman the White  <eker@eker10>

	* makeGrammar.cc (MixfixModule::makeComponentProductions): deleted
	commented out code for variableTokenCode

	* auxProperty.cc (Token::skipSortName): fix comment; use nullptr

2025-06-16  Rubén Rubio <rubenrub@ucm.es>

	* importModule.cc (donateStatements2): deal with strat->expr
	mapping on the LHS of a strategy expression

2025-06-15  Saruman the White  <eker@eker10>

	* view.cc (View::evaluate): check for valid view name

	* token.cc (Token::isValidViewName): added

	* token.hh (class Token): added decl for isValidViewName()

2025-06-06  Saruman the White  <eker@eker10>

	* top.yy: added innerToken

	* modules.yy (sortNameFrag): clear fragment buffer before we start
	using it rather than after we're done with it. This fixes a bug
	where a parsing error leaves crap in the fragment buffer
	(innerToken): added
	(innerFrag): use innerToken

	* auxProperty.cc (Token::skipSortName): allow . and :: in sort
	names if they are inside {} so as to permit . and :: in view names
	used to instantiate parameterized sorts
	(Token::computeAuxProperty): allow . and :: in sort names if they
	are inside {} when checking fo AUX_CONSTANT and AUX_VARIABLE
	properties

2025-05-30  Rubén Rubio  <rubenrub@ucm.es>

	* importTranslation.cc (ImportTranslation::translateStrategy):
	use Sort::FIRST_USER_SORT

	* instantiateViewWithFreeParameters.cc (View::handleStratAwkwardCase):
	use Sort::KIND and variable lifting at the kind level

	* view.cc (View::insertStratToExprMapping):
	removed deletes to avoid double free

2025-04-26  Saruman the White  <eker@eker10>

	* renaming.cc (Renaming::typeMatch): converted commented out cerr
	<< into a DebugInfo()

	* importTranslation.hh (ImportTranslation::translate): use
	Sort::FIRST_USER_SORT

	* renameModule.cc (ImportModule::localSort): use
	Sort::FIRST_USER_SORT

	* view.cc (View::mapComponent): use Sort::FIRST_USER_SORT
	(View::typeMatch): use Sort::FIRST_USER_SORT

	* importTranslation.cc